# drift_app

./: .last_build_id  ARCHITECTURE_GUIDE.md  DELIVERABLE.md  INDEX.md  PROGRESS.md  QUICK_START.md  TESTING_GUIDE.md  WHAT_WAS_DONE.md  analysis.txt  analysis_after.txt  analysis_after2.txt  analysis_after_fix.txt  analysis_final.txt  flutter_bootstrap.js  index.html  main.dart.js  pubspec.yaml  version.json
.github/workflows/: main_deploy.yml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
assets/: AssetManifest.bin.json  NOTICES
backend/: Cargo.toml
backend/migrations/: 0001_create_users_table.sql  0002_create_voyages_table.sql  0003_create_drivers_and_rides_table.sql  0004_create_hotels_and_rooms_table.sql  0005_create_reservations_table.sql  0006_expand_rides_for_operational_flow.sql  0007_create_partners_and_prestations.sql  0008_create_pack_tickets_table.sql  0009_create_payments_table.sql  0010_align_foundation_schema.sql  0011_finalize_partner_marketplace.sql  0012_fix_rooms_name_constraint.sql  0013_create_company_fleet_and_driver_identity.sql  0014_create_admin_control_plane.sql
backend/src/: admin.rs  auth.rs  db.rs  error.rs  main.rs  models.rs  payments.rs  routes.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: api_config.dart
lib/controllers/: app_preferences_controller.dart  experience_filter_controller.dart  (+4 more)
scripts/: replace_with_opacity.py
test/: app_preferences_controller_test.dart  pack_journey_controller_test.dart  widget_test.dart
web/: index.html
(+102 files in other folders)
