[package]
name = "drift_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.4"
jsonwebtoken = "8.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
# for tests
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
